# Argus_Overview_Windows

./: .gitignore  Argus_Overview.spec  README.md  installer.iss  pyproject.toml  version_info.txt
.github/workflows/: build.yml  ci.yml
src/: main.py
src/argus_overview/: __init__.py
src/argus_overview/core/: alert_detector.py  character_manager.py  discovery.py  eve_settings_sync.py  layout_manager.py  window_capture_threaded.py
src/argus_overview/ui/: about_dialog.py  action_registry.py  characters_teams_tab.py  hotkeys_tab.py  layouts_tab.py  main_tab.py  main_window_v21.py  menu_builder.py  settings_manager.py  settings_sync_tab.py  settings_tab.py  tray.py
tests/: __init__.py  test_character_manager.py  test_hotkey_formatting.py
