[project]
name = "argus-overview-windows"
version = "2.4.6"
description = "Professional multi-boxing tool for EVE Online on Windows"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AreteDriver"}]
keywords = ["eve-online", "multiboxing", "windows", "gaming", "preview", "pyside6"]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "pywin32>=306",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "numpy>=1.24.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
build = ["pyinstaller>=6.0"]

[project.scripts]
argus-overview = "main:main"

[project.urls]
Homepage = "https://github.com/AreteDriver/Argus_Overview_Windows"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "N802"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
